--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "bootstrap": "^5.3.1",
+    "mqtt": "^5.7.0",
     "next": "13.4.17",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
