--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "13.4.17",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.5",
     "typescript": "5.1.6"
   }
 }
